2002-12-29  Darin Adler  <darin@apple.com>

        Reviewed by Don.

	- fixed 3120630 -- spacebar scrolls the page as well as pausing the QuickTime movie

	Imitate Mozilla and OmniWeb by not propagating keyboard events after passing them to
	plug-ins regardless of what the plug-in returns, rather than imitating MacIE, which
        looks at the return value from NPP_HandleEvent.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView keyUp:]): Remove call to super, add comment.
        (-[WebBaseNetscapePluginView keyDown:]): Ditto.

2002-12-29  Darin Adler  <darin@apple.com>

        Reviewed by Ken and Don.

	- fixed 3136120 -- much content missing at www.olympic.org

	This site gives modern CSS to "Internet Explorer" or "Netscape 6". Since we are neither of
	those, we need to pretend to be one or the other. So we add olympic.org to our MacIE spoofing list.

        * WebView.subproj/WebUserAgentSpoofTable.gperf: Add olympic.org to the list of pages that give us better
	CSS if we claim to be Internet Explorer.
        * WebView.subproj/WebUserAgentSpoofTable.c: Regenerated.

=== Alexander-46 ===

2002-12-28  Ken Kocienda  <kocienda@apple.com>

         Reviewed by Gramps and Richard

         Fix for this bug:

         Radar 3112233 (400 response when attaching files at mail.yahoo.com)

         I added the MIMETypeForPath method which accesses the WebFoundation mime
         file map we maintain. KHTML can now access this map by using the bridge.

         * WebCoreSupport.subproj/WebBridge.m:
         (-[WebBridge MIMETypeForPath:])

2002-12-28  Darin Adler  <darin@apple.com>

        Reviewed by Gramps and Ken
	Checked in by Ken

	- fixed 3125877 -- RealPlayer plug-in doesn't work in Safari

        * Plugins.subproj/WebBaseNetscapePluginView.h: Remove some methods that don't have
	any need to be public, getCarbonEvent:, sendEvent:, sendUpdateEvent, setUpWindowAndPort.
	Make setWindow public.
